--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,41 +1,23 @@
-# Build
-/dist
-/lib
-/lib-types
-/server
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Development
-node_modules
-*.local
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Cache
-.cache
-.mf
-.rollup.cache
-tsconfig.tsbuildinfo
+# testing
+/coverage
 
-# Logs
-logs
-*.log
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Editor
-.vscode/*
-!.vscode/launch.json
-!.vscode/*.code-snippets
-
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Yarn
-.yarn/*
-!.yarn/releases
